Fixed Overflow Styling Bug in Database Browser

--- a/css/database.css
+++ b/css/database.css
@@ -49,7 +49,7 @@ main div.databaseBrowser {
 .databaseBrowser .loadingContainer,
 .databaseBrowser .resultsContainer,
 .databaseBrowser .errorMessageContainer {
-  height: calc(100vh - 55pt);
+  min-height: calc(100vh - 55pt);
 }
 
 .databaseBrowser .loadingContainer,
